# insurance_check

./: .editorconfig  README.md  makefile  pyproject.toml
src/: __init__.py  main.py  settings.py
src/app/: insurance.py  rules.py
src/controllers/: calculate_insurance.py  handler.py  rules.py
src/models/: enums.py  models.py  user.py
src/tests/: conftest.py  test_main.py
src/tests/app/: test_insurance.py  test_rules.py
src/tests/controllers/: test_handler.py
src/tests/helpers/: e2e_test_cases.py
